--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ env:
   global:
     - secure: rnj7kIfuey1mFuuSak7OjA3DgpPi9Gp8lmqfMNTYHsyHuhtweo1xEJQHFTRd+Cd7a8SIa+OFqYUqPD+cEp8qqqgsTzlZzDZDb9LpcUdsruUHMI1t9e6jTkaaeWAO356YmRe5NwAHRn7M2BUd9A26WxcXG7nyTUoBPjyOa0+bSDE=
 branches:
-    only:
-        - master
+  only:
+    - master 
 script:
-    - cargo build
-    - cargo test
-    - cargo doc --no-deps
+  - cargo build
+  - cargo test
+  - cargo doc
 after_success:
-    - git config --global user.email "travis@travis-ci.org"
-    - git config --global user.name "travis-ci"
-    - git clone --quiet --branch=gh-pages https://${GH_TOKEN}@github.com/GGist/ssdp-rs gh-pages > /dev/null
-    - cd gh-pages
-    - mv ./index.html ../target/doc
-    - rm -rf ./*
-    - cp -rf ../target/doc/* .
-    - git add -A
-    - git commit -m "Latest rustdoc on successful travis build $TRAVIS_BUILD_NUMBER auto-pushed to gh-pages"
-    - git push -fq origin gh-pages > /dev/null
+  - git config --global user.email "travis@travis-ci.org"
+  - git config --global user.name "travis-ci"
+  - git clone --quiet --branch=gh-pages https://${GH_TOKEN}@github.com/GGist/ssdp-rs gh-pages > /dev/null
+  - cd gh-pages
+  - mv ./index.html ../target/doc
+  - rm -rf ./*
+  - cp -rf ../target/doc/* .
+  - git add -A
+  - git commit -m "Latest rustdoc on successful travis build $TRAVIS_BUILD_NUMBER auto-pushed to gh-pages"
+  - git push -fq origin gh-pages > /dev/null
