--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,10 @@ branches:
 install:
   - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-nightly-i686-pc-windows-gnu.msi'
   - ps: Start-FileDownload 'http://slproweb.com/download/Win32OpenSSL-1_0_2a.exe'
-  - Win32OpenSSL-1_0_2a.exe /VERYSILENT /NORESTART /DIR="C:\OpenSSL-Win32"
+  - Win32OpenSSL-1_0_2a.exe /VERYSILENT /NORESTART /DIR="C:\OpenSSL-Win32" /SUPPRESSMSGBOXES
   - SET OPENSSL_INCLUDE_DIR=%OPENSSL_INCLUDE_DIR%;C:\OpenSSL-Win32\include
   - SET OPENSSL_LIB_DIR=%OPENSSL_LIB_DIR%;C:\OpenSSL-Win32\bin
-  - cp C:\OpenSSL-Win32\bin\ssleay32.dll C:\OpenSSL-Win32\bin\libssl32.dll
+  - CP C:\OpenSSL-Win32\bin\ssleay32.dll C:\OpenSSL-Win32\bin\libssl32.dll
   - rust-nightly-i686-pc-windows-gnu.msi /VERYSILENT /NORESTART /DIR="C:\Rust"
   - SET PATH=%PATH%;C:\Rust\bin
   - rustc -V
