--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,11 +8,11 @@ install:
   - SET OPENSSL_INCLUDE_DIR=%OPENSSL_INCLUDE_DIR%;C:\OpenSSL-Win32\include
   - SET OPENSSL_LIB_DIR=%OPENSSL_LIB_DIR%;C:\OpenSSL-Win32\bin
   - CP C:\OpenSSL-Win32\bin\ssleay32.dll C:\OpenSSL-Win32\bin\libssl32.dll
-  - rust-nightly-i686-pc-windows-gnu.msi /VERYSILENT /NORESTART /DIR="C:\Rust"
-  - SET PATH=%PATH%;C:\Rust\bin
+  - rust-nightly-i686-pc-windows-gnu.msi /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
+  - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
   - rustc -V
   - cargo -V
 build_script:
   - cargo build
 test_script:
-    - cargo test
+  - cargo test
