--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,13 @@ branches:
   only:
     - master
 install:
-  - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-nightly-i686-pc-windows-gnu.msi'
+  - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-nightly-i686-pc-windows-gnu.exe'
   - ps: Start-FileDownload 'http://slproweb.com/download/Win32OpenSSL-1_0_2a.exe'
   - Win32OpenSSL-1_0_2a.exe /VERYSILENT /NORESTART /DIR="C:\OpenSSL-Win32" /SUPPRESSMSGBOXES
   - SET OPENSSL_INCLUDE_DIR=%OPENSSL_INCLUDE_DIR%;C:\OpenSSL-Win32\include
   - SET OPENSSL_LIB_DIR=%OPENSSL_LIB_DIR%;C:\OpenSSL-Win32\bin
   - CP C:\OpenSSL-Win32\bin\ssleay32.dll C:\OpenSSL-Win32\bin\libssl32.dll
-  - rust-nightly-i686-pc-windows-gnu.msi /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
+  - rust-nightly-i686-pc-windows-gnu.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
   - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
   - rustc -V
   - cargo -V
