--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,24 @@
 language: rust
+rust: nightly
+env: FEATURES="--features nightly"
+
+sudo: true
+
 env:
   global:
     - secure: rnj7kIfuey1mFuuSak7OjA3DgpPi9Gp8lmqfMNTYHsyHuhtweo1xEJQHFTRd+Cd7a8SIa+OFqYUqPD+cEp8qqqgsTzlZzDZDb9LpcUdsruUHMI1t9e6jTkaaeWAO356YmRe5NwAHRn7M2BUd9A26WxcXG7nyTUoBPjyOa0+bSDE=
+
 branches:
   only:
     - master 
+
 script:
   - cargo build
   - cargo test
   - cargo doc
+
 after_success:
+  # Generate And Publish Documentation
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "travis-ci"
   - git clone --quiet --branch=gh-pages https://${GH_TOKEN}@github.com/GGist/ssdp-rs gh-pages > /dev/null
@@ -20,3 +29,11 @@ after_success:
   - git add -A
   - git commit -m "Latest rustdoc on successful travis build $TRAVIS_BUILD_NUMBER auto-pushed to gh-pages"
   - git push -fq origin gh-pages > /dev/null
+  # Generate And Publish Test Coverage
+  - sudo apt-get install libcurl4-openssl-dev libelf-dev libdw-dev
+  - wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz
+  - tar xzf master.tar.gz
+  - mkdir kcov-master/build && cd kcov-master/build
+  - cmake .. && make
+  - sudo make install && cd ../..
+  - kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/ssdp-*
