--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ keywords = ["upnp", "ssdp", "simple", "service", "discovery"]
 license = "MIT"
 
 [dependencies]
-hyper = "*"
-libc = "*"
-log = "*"
-time = "*"
+hyper = "0.6.0"
+libc  = "0.1.0"
+log   = "0.3.0"
+time  = "0.1.0"
