--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,26 +1,23 @@
-branches:
-  only:
-    - master
-
-os:
-  - MinGW
+environment:
+  matrix:
+  - TARGET: i686-pc-windows-gnu
+  - TARGET: x86_64-pc-windows-gnu
 
 install:
-  - ps: Start-FileDownload 'https://static.rust-lang.org/dist/rust-nightly-i686-pc-windows-gnu.exe'
   - ps: Start-FileDownload 'https://slproweb.com/download/Win32OpenSSL-1_0_2e.exe'
-  - rust-nightly-i686-pc-windows-gnu.exe /VERYSILENT /NORESTART /DIR="C:\Rust"
   - Win32OpenSSL-1_0_2e.exe /VERYSILENT /NORESTART /DIR="C:\OpenSSL-Win32" /SUPPRESSMSGBOXES
-  - SET PATH=%PATH%;C:\MinGW\bin
-  - SET PATH=%PATH%;C:\Rust\bin
   - SET OPENSSL_INCLUDE_DIR=C:\OpenSSL-Win32\include
   - SET OPENSSL_LIB_DIR=C:\OpenSSL-Win32\bin
   - CP C:\OpenSSL-Win32\bin\ssleay32.dll C:\OpenSSL-Win32\bin\libssl32.dll
-  - gcc --version
+  - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-nightly-${env:TARGET}.exe"
+  - rust-nightly-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
+  - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
+  - SET PATH=%PATH%;C:\MinGW\bin
   - rustc -V
   - cargo -V
 
-build_script:
-  - cargo build
+build: false
 
 test_script:
-  - cargo test
+  - cargo build
+  - cargo test --verbose
