--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssdp"
-version = "0.1.3"
+version = "0.1.4"
 description = "An asynchronous abstraction for discovering devices and services on a network."
 
 authors = ["GGist <amiller4421@gmail.com>"]
@@ -13,7 +13,7 @@ readme = "README.md"
 
 keywords = ["upnp", "ssdp", "simple", "service", "discovery"]
 
-license = "MIT"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 hyper = "0.7.0"
