--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ license = "MIT/Apache-2.0"
 libc  = "0.1.0"
 log   = "0.3.0"
 time  = "0.1.0"
+ifaces = "0.0.3"
 
 [dependencies.hyper]
 version = "0.9.0"
