--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/GGist/ssdp-rs"
 log = "0.3.0"
 net2 = "0.2.23"
 time = "0.1.0"
+error-chain = "0.7"
 
 [dependencies.hyper]
 default-features = false
